# Cryptographic-Virtual-Machine-CVM

./: Cargo.toml  README.md  index.html  package-lock.json
.github/workflows/: deploy.yml
crates/vm-asm/: Cargo.toml
crates/vm-asm/src/: emitter.rs  lexer.rs  lib.rs  parser.rs
crates/vm-cli/: Cargo.toml
crates/vm-cli/src/: main.rs
crates/vm-core/: Cargo.toml
crates/vm-core/src/: error.rs  lib.rs  memory.rs  opcode.rs  registers.rs  stack.rs  value.rs  vm.rs
crates/vm-crypto/: Cargo.toml
crates/vm-crypto/src/: dispatch.rs  keystore.rs  lib.rs  provider.rs
crates/vm-disasm/: Cargo.toml
crates/vm-disasm/src/: disassembler.rs  lib.rs
crates/vm-sandbox/: Cargo.toml
crates/vm-sandbox/src/: gas.rs  lib.rs  policy.rs
docs/: architecture.md  isa-spec.md
examples/: factorial.cvmasm  factorial.cvmb  fibonacci.cvmasm  fibonacci.cvmb  hash-and-sign.cvmasm  sandbox-escape-attempt.cvmasm  sandbox-escape.cvmb
visualizer/: .gitignore  app.js  index.html  package.json  style.css
