[workspace]
members = [
    "crates/vm-core",
    "crates/vm-crypto",
    "crates/vm-asm",
    "crates/vm-disasm",
    "crates/vm-sandbox",
    "crates/vm-cli",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
rand = "0.8"
clap = { version = "4.6", features = ["derive"] }
hex = "0.4"
