[package]
name = "cvm-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic opcode dispatch and provider layer for CVM"

[dependencies]
cvm-core = { path = "../vm-core" }
thiserror = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hmac = { workspace = true }
aes-gcm = { workspace = true }
rsa = { workspace = true }
p256 = { workspace = true }
ecdsa = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
